--- a/index.html
+++ b/index.html
@@ -442,6 +442,10 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
   margin: 60px auto;
 }
 
+body, html {
+  overflow-x: hidden;
+}
+	    
 .u-dialog-section-10 .u-container-layout-1 {
   padding: 0;
 }
